# crosstool-ng-pre-build

./: README.md  action.yml  memo.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-crosstool-ng.yml  create-release.yml  install-test.yml  musl.yml
aarch64-unknown-linux-gnu/: build.log.bz2
arm-unknown-linux-gnueabi/: build.log.bz2
arm-unknown-linux-gnueabihf/: build.log.bz2
armv7-unknown-linux-gnueabihf/: build.log.bz2
config_rewriter/: Cargo.toml  config.toml
config_rewriter/src/: clean.rs  cmd.rs  install.rs  main.rs  rewrite.rs  targets.rs  utils.rs
configs/: i686-unknown-linux-gnu.defconfig
i586-unknown-linux-gnu/: build.log.bz2
i686-unknown-linux-gnu/: build.log.bz2
loongarch64-unknown-linux-gnu/: build.log.bz2
loongarch64-unknown-linux-gnu/share/: loongarch64-unknown-linux-gnu-ct-ng.config.bz2
loongarch64-unknown-linux-musl/: build.log.bz2
loongarch64-unknown-linux-musl/share/: loongarch64-unknown-linux-musl-ct-ng.config.bz2
others/powerpc64le-unknown-linux-gnu/: action.yml  build-powerpc64le-toolchain.sh
powerpc-unknown-linux-gnu/: build.log.bz2
powerpc64-unknown-linux-gnu/: build.log.bz2
riscv64gc-unknown-linux-gnu/: build.log.bz2
s390x-unknown-linux-gnu/: build.log.bz2
scripts/: # build-fuchsia-toolchain.sh  build-freebsd-toolchain.sh  build-fuchsia-toolchain.sh  build-illumos-toolchain.sh  build-netbsd-toolchain.sh  build-powerpc64le-toolchain.sh  build-solaris-toolchain.sh  crosstool-ng-build.sh  musl.sh
sparcv9-sun-solaris/lib/: libcc1.la  (+1 more)
toolchain-for-building-rustc/: Cargo.toml  config.toml  tree.txt
(+3913 files in other folders)
